--- a/React/Practice/react-sns/Front/package.json
+++ b/React/Practice/react-sns/Front/package.json
@@ -13,12 +13,14 @@
   "license": "ISC",
   "dependencies": {
     "antd": "^3.20.5",
+    "axios": "^0.19.0",
     "next": "^9.0.2",
     "next-redux-wrapper": "^4.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.3",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "redux-saga": "^1.1.3"
   },
   "devDependencies": {
     "eslint": "^6.1.0",
